<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/vector_ic_search"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_menu_2"
            android:icon="@drawable/vector_ic_post"
            android:title="@string/nav_menu_2" />
        <item
            android:id="@+id/nav_menu_3"
            android:icon="@drawable/vector_ic_manager"
            android:title="@string/nav_menu_3" />

        <item
            android:id="@+id/nav_menu_4"
            android:icon="@drawable/vector_ic_save"
            android:title="@string/nav_menu_4" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_menu_5"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_menu_5" />
            <item
                android:id="@+id/nav_menu_6"
                android:icon="@drawable/vector_ic_exit"
                android:title="@string/nav_menu_6" />
        </menu>
    </item>

</menu>
