<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_btnNTD"
            android:textSize="38sp"
            android:textColor="@color/colorBg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/st_txtDangNhap"
            android:id="@+id/txttk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:layout_marginTop="15dp"
            android:text="@string/st_hintTenCT"/>

        <EditText
            android:id="@+id/namecompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_hintEmail"/>

        <EditText
            android:id="@+id/edmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_sdt"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_hintPass"/>

        <EditText
            android:id="@+id/edpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_renewpass"/>

        <EditText
            android:id="@+id/edrepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>




           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/st_dangky"
               android:id="@+id/bt"
               android:background="@color/colorBg"
               android:textColor="@color/white"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"/>




    </LinearLayout>

</RelativeLayout>