<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_btnNTV"
            android:textSize="38sp"
            android:textColor="@color/colorBg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/st_txtDangNhap"
            android:id="@+id/txttk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:layout_marginTop="15dp"
            android:text="@string/st_tenProf"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_hintEmail"/>

        <EditText
            android:id="@+id/edmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_hintPass"/>

        <EditText
            android:id="@+id/edpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/st_renewpass"/>

        <EditText
            android:id="@+id/edrepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:id="@+id/rlt_bg"
            android:layout_width="150dp"
            android:layout_height="@dimen/bar_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@color/colorBg">


            <com.example.vinhnguyen.quickjob.activity.LoginLoadingView
                android:id="@+id/login_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>