<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mid"
        android:gravity="center"
        android:id="@+id/linearLayout2"
        android:orientation="vertical"
        >

    </LinearLayout>

        <LinearLayout
            android:id="@+id/mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            >

          <EditText
              android:id="@+id/oldpass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/st_oldpass"
              android:layout_marginBottom="8dp"
              android:inputType="textPassword"
              android:fontFamily="sans-serif"/>

            <EditText
                android:id="@+id/newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/st_newpass"
                android:layout_marginBottom="8dp"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"/>

            <EditText
                android:id="@+id/renewpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/st_renewpass"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"/>







        </LinearLayout>
        <Button
            android:id="@+id/btlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_xacNhan"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:background="@color/color_background_button"
            android:layout_below="@+id/mid"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:layout_marginTop="30dp"

            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/st_CHANGE_PASSWORD"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/color_background_button"
        android:layout_gravity="center"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"/>
</RelativeLayout>

