<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_button">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/id1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/group_row">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/edmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/st_hintEmail"
                    android:inputType="text"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:letterSpacing="0.1"
                    android:textColor="#000000"
                    android:textColorHint="#545454"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71"></LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/id1"
            android:layout_marginTop="24dp"
            >
            <Button
                android:id="@+id/btsend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/MyButton2"
                android:text="@string/st_quenmk"

                />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/st_txtDangNhap"
                android:textColor="#ffffff"
                 />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>